<resources>
    <string name="app_name">OfficeCartTask</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">No Account ?</string>
    <string name="registration">REGISTRATION</string>
    <string name="fast_login">Fast Login</string>
    <string name="facebook">Facebook</string>
    <string name="vkotankte">Vkotankte</string>
    <string name="odnoklasniki">Odnoklasniki</string>
    <string name="mail">mail.ru</string>
    <string name="enter">Enter</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dave_salerman">Dave Salerman</string>
    <string name="sale">Sale</string>
    <string name="catalogue">Catalogue</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

</resources>
