<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sale"
            android:title="@string/sale"
            android:icon="@drawable/ic_local_offer_black_48dp"/>
        <item
            android:id="@+id/catalogue"
            android:title="@string/catalogue"
            android:icon="@drawable/ic_description_black_48dp" />
        <item
            android:id="@+id/cart"
            android:title="@string/cart"
            android:icon="@drawable/ic_shopping_cart_black_48dp"/>
        <item
            android:id="@+id/favorites"
            android:title="@string/favorites"
            android:icon="@drawable/ic_star_black_48dp"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_black_48dp"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_exit_to_app_black_48dp"/>
    </group>

</menu>
